# useless-macos-patches

./: README.md
patches/chromium/: args.gn  replace_libclangrt.txt
patches/chromium/src/: 0001-Support-building-on-Xcode-12-beta-1-arm64-SDK.patch  0001-Support-building-on-the-simulated-arm64-SDK.patch
patches/chromium/swiftshader/: 0001-Support-for-macOS-on-ARM.patch
patches/chromium/v8/: 0001-Support-for-macOS-on-ARM.patch
patches/chromium/vulkan_memory_allocator/: 0001-Support-building-on-Xcode-12-beta-1-arm64-SDK.patch
